--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.6.3",
-    "axios": "^0.21.0",
+    "axios": "^0.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "6",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0"
   },
